// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Change position to absolute 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavbarHelperContent
    background={true}
    boxShadow={true}
    fixed={false}
    icon="dcr"
    iconColor={null}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    logoLink={
        Object {
            "route": "/testroute",
          }
    }
    smallScreen={false}
    style={Object {}}
    theme="primaryNegative"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="decred-ui-navbar-logo-link"
          to="/testroute"
>
          <div
                    className="decred-ui-navbar-logo"
          >
                    logo
          </div>
</NavLink>,
        <div
          className="decred-ui-navbar-link-container"
/>,
      ],
      "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
      "style": Object {
        "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
        "position": "absolute",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <div
            className="decred-ui-navbar-logo"
>
            logo
</div>,
          "className": "decred-ui-navbar-logo-link",
          "to": "/testroute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "logo",
            "className": "decred-ui-navbar-logo",
          },
          "ref": null,
          "rendered": "logo",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "decred-ui-navbar-link-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="decred-ui-navbar-logo-link"
            to="/testroute"
>
            <div
                        className="decred-ui-navbar-logo"
            >
                        logo
            </div>
</NavLink>,
          <div
            className="decred-ui-navbar-link-container"
/>,
        ],
        "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
        "style": Object {
          "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
          "position": "absolute",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <div
              className="decred-ui-navbar-logo"
>
              logo
</div>,
            "className": "decred-ui-navbar-logo-link",
            "to": "/testroute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "logo",
              "className": "decred-ui-navbar-logo",
            },
            "ref": null,
            "rendered": "logo",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "decred-ui-navbar-link-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Changing icon, icon color and theme calls their functions correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavbarHelperContent
    background={true}
    boxShadow={true}
    fixed={true}
    icon="atomic"
    iconColor="orange"
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    logoLink={
        Object {
            "route": "/testroute",
          }
    }
    smallScreen={false}
    style={Object {}}
    theme="primaryBlue"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="decred-ui-navbar-logo-link"
          to="/testroute"
>
          <div
                    className="decred-ui-navbar-logo"
          >
                    logo
          </div>
</NavLink>,
        <div
          className="decred-ui-navbar-link-container"
/>,
      ],
      "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
      "style": Object {
        "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
        "position": "fixed",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <div
            className="decred-ui-navbar-logo"
>
            logo
</div>,
          "className": "decred-ui-navbar-logo-link",
          "to": "/testroute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "logo",
            "className": "decred-ui-navbar-logo",
          },
          "ref": null,
          "rendered": "logo",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "decred-ui-navbar-link-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="decred-ui-navbar-logo-link"
            to="/testroute"
>
            <div
                        className="decred-ui-navbar-logo"
            >
                        logo
            </div>
</NavLink>,
          <div
            className="decred-ui-navbar-link-container"
/>,
        ],
        "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
        "style": Object {
          "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
          "position": "fixed",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <div
              className="decred-ui-navbar-logo"
>
              logo
</div>,
            "className": "decred-ui-navbar-logo-link",
            "to": "/testroute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "logo",
              "className": "decred-ui-navbar-logo",
            },
            "ref": null,
            "rendered": "logo",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "decred-ui-navbar-link-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Custom style overrides defaults 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavbarHelperContent
    background={true}
    boxShadow={true}
    fixed={true}
    icon="dcr"
    iconColor={null}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    logoLink={
        Object {
            "route": "/testroute",
          }
    }
    smallScreen={false}
    style={
        Object {
            "position": "relative",
          }
    }
    theme="primaryNegative"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="decred-ui-navbar-logo-link"
          to="/testroute"
>
          <div
                    className="decred-ui-navbar-logo"
          >
                    logo
          </div>
</NavLink>,
        <div
          className="decred-ui-navbar-link-container"
/>,
      ],
      "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
      "style": Object {
        "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
        "position": "relative",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <div
            className="decred-ui-navbar-logo"
>
            logo
</div>,
          "className": "decred-ui-navbar-logo-link",
          "to": "/testroute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "logo",
            "className": "decred-ui-navbar-logo",
          },
          "ref": null,
          "rendered": "logo",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "decred-ui-navbar-link-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="decred-ui-navbar-logo-link"
            to="/testroute"
>
            <div
                        className="decred-ui-navbar-logo"
            >
                        logo
            </div>
</NavLink>,
          <div
            className="decred-ui-navbar-link-container"
/>,
        ],
        "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
        "style": Object {
          "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
          "position": "relative",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <div
              className="decred-ui-navbar-logo"
>
              logo
</div>,
            "className": "decred-ui-navbar-logo-link",
            "to": "/testroute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "logo",
              "className": "decred-ui-navbar-logo",
            },
            "ref": null,
            "rendered": "logo",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "decred-ui-navbar-link-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Default render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavbarHelperContent
    background={true}
    boxShadow={true}
    fixed={true}
    icon="dcr"
    iconColor={null}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    logoLink={
        Object {
            "route": "/testroute",
          }
    }
    smallScreen={false}
    style={Object {}}
    theme="primaryNegative"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="decred-ui-navbar-logo-link"
          to="/testroute"
>
          <div
                    className="decred-ui-navbar-logo"
          >
                    logo
          </div>
</NavLink>,
        <div
          className="decred-ui-navbar-link-container"
/>,
      ],
      "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
      "style": Object {
        "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
        "position": "fixed",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <div
            className="decred-ui-navbar-logo"
>
            logo
</div>,
          "className": "decred-ui-navbar-logo-link",
          "to": "/testroute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "logo",
            "className": "decred-ui-navbar-logo",
          },
          "ref": null,
          "rendered": "logo",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "decred-ui-navbar-link-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="decred-ui-navbar-logo-link"
            to="/testroute"
>
            <div
                        className="decred-ui-navbar-logo"
            >
                        logo
            </div>
</NavLink>,
          <div
            className="decred-ui-navbar-link-container"
/>,
        ],
        "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
        "style": Object {
          "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
          "position": "fixed",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <div
              className="decred-ui-navbar-logo"
>
              logo
</div>,
            "className": "decred-ui-navbar-logo-link",
            "to": "/testroute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "logo",
              "className": "decred-ui-navbar-logo",
            },
            "ref": null,
            "rendered": "logo",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "decred-ui-navbar-link-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar No shadow 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavbarHelperContent
    background={true}
    boxShadow={false}
    fixed={true}
    icon="dcr"
    iconColor={null}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    logoLink={
        Object {
            "route": "/testroute",
          }
    }
    smallScreen={false}
    style={Object {}}
    theme="primaryNegative"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="decred-ui-navbar-logo-link"
          to="/testroute"
>
          <div
                    className="decred-ui-navbar-logo"
          >
                    logo
          </div>
</NavLink>,
        <div
          className="decred-ui-navbar-link-container"
/>,
      ],
      "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
      "style": Object {
        "boxShadow": null,
        "position": "fixed",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <div
            className="decred-ui-navbar-logo"
>
            logo
</div>,
          "className": "decred-ui-navbar-logo-link",
          "to": "/testroute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "logo",
            "className": "decred-ui-navbar-logo",
          },
          "ref": null,
          "rendered": "logo",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "decred-ui-navbar-link-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="decred-ui-navbar-logo-link"
            to="/testroute"
>
            <div
                        className="decred-ui-navbar-logo"
            >
                        logo
            </div>
</NavLink>,
          <div
            className="decred-ui-navbar-link-container"
/>,
        ],
        "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
        "style": Object {
          "boxShadow": null,
          "position": "fixed",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <div
              className="decred-ui-navbar-logo"
>
              logo
</div>,
            "className": "decred-ui-navbar-logo-link",
            "to": "/testroute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "logo",
              "className": "decred-ui-navbar-logo",
            },
            "ref": null,
            "rendered": "logo",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "decred-ui-navbar-link-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Small screen has menu rather than links 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavbarHelperContent
    background={true}
    boxShadow={true}
    fixed={true}
    icon="dcr"
    iconColor={null}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    logoLink={
        Object {
            "route": "/testroute",
          }
    }
    smallScreen={true}
    style={Object {}}
    theme="primaryNegative"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="decred-ui-navbar-logo-link"
          to="/testroute"
>
          <div
                    className="decred-ui-navbar-logo"
          >
                    logo
          </div>
</NavLink>,
        <div
          className="decred-ui-navbar-link-container"
>
          <MenuContainer
                    links={
                              Array [
                                        Object {
                                          "route": "/testroute",
                                          "text": "testroute",
                                        },
                                      ]
                    }
          />
</div>,
      ],
      "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
      "style": Object {
        "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
        "position": "fixed",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <div
            className="decred-ui-navbar-logo"
>
            logo
</div>,
          "className": "decred-ui-navbar-logo-link",
          "to": "/testroute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "logo",
            "className": "decred-ui-navbar-logo",
          },
          "ref": null,
          "rendered": "logo",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <MenuContainer
            links={
                        Array [
                                    Object {
                                      "route": "/testroute",
                                      "text": "testroute",
                                    },
                                  ]
            }
/>,
          "className": "decred-ui-navbar-link-container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "links": Array [
              Object {
                "route": "/testroute",
                "text": "testroute",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="decred-ui-navbar-logo-link"
            to="/testroute"
>
            <div
                        className="decred-ui-navbar-logo"
            >
                        logo
            </div>
</NavLink>,
          <div
            className="decred-ui-navbar-link-container"
>
            <MenuContainer
                        links={
                                    Array [
                                                Object {
                                                  "route": "/testroute",
                                                  "text": "testroute",
                                                },
                                              ]
                        }
            />
</div>,
        ],
        "className": "decred-ui-navbar-default decred-ui-navbar decred-ui-navbar-primaryNegative",
        "style": Object {
          "boxShadow": "0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)",
          "position": "fixed",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <div
              className="decred-ui-navbar-logo"
>
              logo
</div>,
            "className": "decred-ui-navbar-logo-link",
            "to": "/testroute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "logo",
              "className": "decred-ui-navbar-logo",
            },
            "ref": null,
            "rendered": "logo",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <MenuContainer
              links={
                            Array [
                                          Object {
                                            "route": "/testroute",
                                            "text": "testroute",
                                          },
                                        ]
              }
/>,
            "className": "decred-ui-navbar-link-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "links": Array [
                Object {
                  "route": "/testroute",
                  "text": "testroute",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Transparent background 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavbarHelperContent
    background={false}
    boxShadow={true}
    fixed={true}
    icon="dcr"
    iconColor={null}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    logoLink={
        Object {
            "route": "/testroute",
          }
    }
    smallScreen={false}
    style={Object {}}
    theme="primaryNegative"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="decred-ui-navbar-logo-link"
          to="/testroute"
>
          <div
                    className="decred-ui-navbar-logo"
          >
                    logo
          </div>
</NavLink>,
        <div
          className="decred-ui-navbar-link-container"
/>,
      ],
      "className": "decred-ui-navbar-transparent decred-ui-navbar decred-ui-navbar-primaryNegative",
      "style": Object {
        "boxShadow": null,
        "position": "fixed",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <div
            className="decred-ui-navbar-logo"
>
            logo
</div>,
          "className": "decred-ui-navbar-logo-link",
          "to": "/testroute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "logo",
            "className": "decred-ui-navbar-logo",
          },
          "ref": null,
          "rendered": "logo",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "decred-ui-navbar-link-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="decred-ui-navbar-logo-link"
            to="/testroute"
>
            <div
                        className="decred-ui-navbar-logo"
            >
                        logo
            </div>
</NavLink>,
          <div
            className="decred-ui-navbar-link-container"
/>,
        ],
        "className": "decred-ui-navbar-transparent decred-ui-navbar decred-ui-navbar-primaryNegative",
        "style": Object {
          "boxShadow": null,
          "position": "fixed",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <div
              className="decred-ui-navbar-logo"
>
              logo
</div>,
            "className": "decred-ui-navbar-logo-link",
            "to": "/testroute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "logo",
              "className": "decred-ui-navbar-logo",
            },
            "ref": null,
            "rendered": "logo",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "decred-ui-navbar-link-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
